# Inclusive-Venues

./: .gitignore  README.md  django_run.bat  lws.config.js  react_start.bat
.github/workflows/: azure-app-services.yml  azure-static-web-apps-lemon-bush-04199d803.yml  azure-static-web-apps.yml  build_django.yml  (+4 more)
django/: .funcignore  .gitignore  .pylintrc  Pipfile  manage.py  production_requirements.txt  pyproject.toml  requirements.txt  runtests.bat  runtests.py  sample.env
django/inclusivevenues/: admin.py  apps.py  filters.py  maps.py  models.py  permissions.py  serializers.py  settings.py  tests.py  urls.py  views.py
django/inclusivevenues/management/commands/: addvenuedata.py  calculatevenuescores.py  clearvenuedata.py
django/inclusivevenues/migrations/: 0001_initial.py  0002_venue_score_image.py  0003_alter_image_venue_alter_venue_score.py  0004_venue_map.py  0005_alter_rating_category_alter_rating_review.py  0006_rating_unique_category_review_and_more.py  0007_alter_venue_score.py  0008_review_date.py  0009_alter_ratingcategory_name_alter_venuecategory_name_and_more.py
django/inclusivevenues/templates/inclusivevenues/: index.html
django/inclusivevenues/tests/: test_models.py  test_views.py
django/project/: asgi.py  production.py  settings.py  urls.py  wsgi.py
django/tests/: settings.py  test_models.py  test_views.py  test_views_auth.py  test_views_review.py  test_views_venue.py
nginx/: 192_168_1_237.csr  192_168_1_237.key  nginx.conf
react/: .env  .gitignore  index.html  package-lock.json  package.json  sample.env  tsconfig.json  vite.config.ts
(+90 files in other folders)
